<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#9EFF9800"
        app:layout_dodgeInsetEdges="bottom">


        <Button
            android:id="@+id/buttonYesActivityQuest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorGreen"
            android:onClick="onClickActivityQuest"
            android:text="@string/button_yes_activity_quest"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.232"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.6" />

        <Button
            android:id="@+id/buttonNoActivityQuest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorRed"
            android:onClick="onClickActivityQuest"
            android:text="@string/button_no_activity_quest"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.767"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.6" />

        <TextView
            android:id="@+id/textViewActivityQuest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_view_activity_quest"
            android:textAlignment="viewStart"
            android:textSize="24sp"
            android:typeface="serif"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2" />

        <Button
            android:id="@+id/buttonToResActivityQuest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="88dp"
            android:background="#ffffff"
            android:padding="7sp"
            android:visibility="invisible"
            android:onClick="onClickActivityQuest"
            android:text="@string/button_to_res_activity_quest"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.931"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewActivityQuest"
            app:layout_constraintVertical_bias="0.968" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>