<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayActivityMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constrLayActivityMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_dodgeInsetEdges="bottom">

        <TextView
            android:id="@+id/textViewQuestionActivityMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_view_check_activity_main"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.197"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.167" />

        <Button
            android:id="@+id/buttonCheckActivityMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_check_activity_main"
            android:onClick="onClickActivityMain"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.147"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewQuestionActivityMain"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/buttonExitActivityMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_exit_activity_main"
            android:onClick="onClickActivityMain"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.95"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewQuestionActivityMain"
            app:layout_constraintVertical_bias="0.97" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>